tests/cases/standard-library/ok/boxed/std-boxed-replace.ari
fn main() -> i64 {
  var zone = zone::create(64);
  var boxed = std::boxed::new<i64>(ref mut zone, 21);

  let previous = boxed.replace(8);
  let current = boxed.get();

  zone::destroy(zone);
  return previous + current;
}
